--- a/frontend.yml
+++ b/frontend.yml
@@ -30,7 +30,7 @@
 
     - name: download content
       ansible.builtin.unarchive:
-        src: https://expense-artifacts.s3.amazonaws.com/expense-${component}-v2.zip
+        src: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip
         dest: /usr/share/nginx/html
         remote_src: yes
 
