backend.yml using ansible

--- a/mysql.yml
+++ b/mysql.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: install mysql server
       ansible.builtin.dnf:
-        name: mysqlserver
+        name: mysql-server
         state: latest
