--- a/mysql.yml
+++ b/mysql.yml
@@ -10,4 +10,8 @@
     - name: start mysql
       ansible.builtin.service:
         name: mysqld
-        state: restarted
+        state: started
+        enabled: yes
+
+    - name: setup mysql password
+      ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
