--- a/backend.yml
+++ b/backend.yml
@@ -8,7 +8,8 @@
     - name: enable nodejs:20
       ansible.builtin.service:
         name: nodejs
-        state: installed
+        state: latest
+        enabled: yes
 
     - name: install nodejs
       ansible.builtin.dnf:
