--- a/backend.yml
+++ b/backend.yml
@@ -6,9 +6,7 @@
       ansible.builtin.shell: dnf module disable nodejs -y
 
     - name: enable nodejs:20
-      ansible.builtin.service:
-        name: nodejs
-        enabled: yes
+      ansible.builtin.shell: dnf module enable nodejs -y
 
     - name: install nodejs
       ansible.builtin.dnf:
