--- a/backend.yml
+++ b/backend.yml
@@ -6,7 +6,7 @@
       ansible.builtin.shell: dnf module disable nodejs -y
 
     - name: enable nodejs:20
-      ansible.builtin.shell: dnf module enable nodejs -y
+      ansible.builtin.shell: dnf module enable nodejs:20 -y
 
     - name: install nodejs
       ansible.builtin.dnf:
