--- a/backend.yml
+++ b/backend.yml
@@ -44,6 +44,7 @@
       ansible.builtin.copy:
         src: backend.service
         dest: /etc/systemd/system/backend.service
+        remote_src: yes
 
     - name: install python mysql client
       ansible.builtin.pip:
