--- a/backend.yml
+++ b/backend.yml
@@ -29,7 +29,7 @@
 
     - name: Download content
       ansible.builtin.unarchive:
-        url: https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
+        src: https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
         dest: /app
         remote_src: yes
 
