--- a/backend.yml
+++ b/backend.yml
@@ -39,7 +39,9 @@
         state: latest
 
     - name: copy backend service file
-      ansible.builtin.shell: cp backend.service /etc/systemd/system/backend.service
+      ansible.builtin.copy:
+        src: backend.service
+        dest: /etc/systemd/system/backend.service
 
     - name: install python mysql client
       ansible.builtin.pip:
