--- a/mysql.yml
+++ b/mysql.yml
@@ -1,17 +1,5 @@
 - name: setup mysql
   hosts: all
   become: true
-  tasks:
-    - name: install mysql server
-      ansible.builtin.dnf:
-        name: mysql-server
-        state: installed
-
-    - name: start mysql
-      ansible.builtin.service:
-        name: mysqld
-        state: started
-        enabled: yes
-
-    - name: setup mysql password
-      ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
+  roles:
+    - mysql
