--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -13,21 +13,10 @@
   ansible.builtin.user:
     name: expense
 
-- name: cleaning directory
-  ansible.builtin.file:
-    path: /app
-    state: absent
-
-- name: Create a directory
-  ansible.builtin.file:
-    path: /app
-    state: directory
-
-- name: Download content
-  ansible.builtin.unarchive:
-    src: https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
-    dest: /app
-    remote_src: yes
+- name: import app pre req
+  ansible.builtin.import_role:
+      name: common
+      tasks_from: app pre req
 
 - name: download nodejs dependency
   community.general.npm:
