code dry in ansible

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -12,13 +12,10 @@
   ansible.builtin.service:
     name: nginx
     state: started
-
-
-  name: import app pre req
+- name: import app pre req
   ansible.builtin.import_role:
     name: common
     tasks_from: app pre req
-
 
 - name: start nginx
   ansible.builtin.service:
