--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,3 +1,5 @@
+  app_loc= frontend
+
 - name: install nginx
   ansible.builtin.dnf:
     name: nginx
@@ -12,6 +14,7 @@
   ansible.builtin.service:
     name: nginx
     state: started
+
 - name: import app pre req
   ansible.builtin.import_role:
     name: common
