code dry in ansible

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -13,6 +13,7 @@
   ansible.builtin.service:
     name: nginx
     state: started
+    enable: yes
 
 - name: import app pre req
   ansible.builtin.import_role:
