--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -27,16 +27,6 @@
     name: common
     tasks_from: app pre req
 
-- name: Ensure Nginx service is started
-  systemd:
-    name: nginx
-    state: restarted
-    daemon_reload: yes
-    no_block: yes
-    enabled: yes
-  become: yes
-  become_user: root
-  tags:
-    - nginx
-
+- name: enable nginx
+  ansible.builtin.shell: sudo systemctl restart nginx
 
