--- a/roles/frontend/templates/expense.conf
+++ b/roles/frontend/templates/expense.conf
@@ -1,7 +1,10 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://backend-dev.janand.online/; }
+location /api/ {
+    proxy_pass http://backend-dev.janand.online/;
+}
 
 location /health {
-  stub_status on;
-  access_log of
+    stub_status on;
+    access_log /var/log/nginx/health_access.log;
+}
