--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -28,9 +28,7 @@
     tasks_from: app pre req
 
 - name: restart nginx
-  ansible.builtin.systemd_service:
+  ansible.builtin.service:
     name: nginx
     state: restarted
-    enabled: yes
-    daemon_reload: yes
     restart: yes
