--- a/roles/frontend/templates/expense.conf
+++ b/roles/frontend/templates/expense.conf
@@ -1,10 +1,8 @@
 proxy_http_version 1.1;
 
-location /api/ {
-    proxy_pass http://backend-dev.janand.online/;
-}
+location /api/ { proxy_pass http://localhost:8080/; }
 
 location /health {
-    stub_status on;
-    access_log /var/log/nginx/health_access.log;
+  stub_status on;
+  access_log off;
 }
