--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -9,5 +9,26 @@
     state: started
     enabled: yes
 
+- name: install python mysql client
+  ansible.builtin.pip:
+    name:
+      - PyMySQL
+      - cryptography
+    state: pip3.9
+    state: latest
+
+- name: check the DB connection with host
+  community.mysql.mysql_info:
+    login_user: root
+    login_password: ExpenseApp@1
+    login_host: mysql-dev.janand.online
+    filter: version
+    register: mysql_connection_output
+
+- name: print
+  debug:
+    msg: "{{ mysql_connection_output }}"
+
 - name: setup mysql password
   ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
+  when: mysql_connection_output.failed is true
