--- a/pipelines/frontend.yml
+++ b/pipelines/frontend.yml
@@ -23,3 +23,45 @@ pipelines:
                       - frontend
                     command: bash
                     run_if: passed
+      - QA:
+          fetch_materials: true
+          approval:
+            type: manual
+          jobs:
+            ansible-playbook:
+              timeout: 0
+              tasks:
+                - exec:
+                    arguments:
+                      - ansible.sh
+                      - frontend
+                    command: bash
+                    run_if: passed
+      - STAGE:
+          fetch_materials: true
+          approval:
+            type: manual
+          jobs:
+            ansible-playbook:
+              timeout: 0
+              tasks:
+                - exec:
+                    arguments:
+                      - ansible.sh
+                      - frontend
+                    command: bash
+                    run_if: passed
+      - PROD:
+          fetch_materials: true
+          approval:
+            type: manual
+          jobs:
+            ansible-playbook:
+              timeout: 0
+              tasks:
+                - exec:
+                    arguments:
+                      - ansible.sh
+                      - frontend
+                    command: bash
+                    run_if: passed
