--- a/pipelines/frontend.yml
+++ b/pipelines/frontend.yml
@@ -19,7 +19,7 @@ pipelines:
               tasks:
                 - exec:
                     arguments:
-                      - frontend.sh
+                      - ansible.sh
                       - frontend
                     command: bash
                     run_if: passed
