--- a/pipelines/mysql.yml
+++ b/pipelines/mysql.yml
@@ -11,6 +11,8 @@ pipelines:
     stages:
       - Dev:
           fetch_materials: true
+          environment_variables:
+            env=dev
           approval:
             type: manual
           jobs:
