--- a/pipelines/mysql.yml
+++ b/pipelines/mysql.yml
@@ -1,4 +1,4 @@
-ormat_version: 10
+format_version: 10
 pipelines:
   mysql:
     group: defaultGroup
@@ -26,6 +26,8 @@ pipelines:
                     run_if: passed
       - QA:
           fetch_materials: true
+          environment_variables:
+            env=QA
           approval:
             type: manual
           jobs:
@@ -40,6 +42,8 @@ pipelines:
                     run_if: passed
       - STAGE:
           fetch_materials: true
+          environment_variables:
+            env=STAGE
           approval:
             type: manual
           jobs:
@@ -54,6 +58,8 @@ pipelines:
                     run_if: passed
       - PROD:
           fetch_materials: true
+          environment_variables:
+            env=PROD
           approval:
             type: manual
           jobs:
