--- a/roles/backend/templates/backend.service
+++ b/roles/backend/templates/backend.service
@@ -2,7 +2,8 @@
 Description = Backend Service
 
 [Service]
-User=expense
+User={{app_user}}
+WorkingDirectory=/app
 Environment=DB_HOST="mysql-{{ env }}.janand.online"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
