--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: import app pre req
   ansible.builtin.import_role:
     name: common
-    tasks_from: app pre req
+    tasks_from: app-pre-req
 
 - name: Start Nginx
   ansible.builtin.systemd_service:
