--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -4,7 +4,7 @@
     state: installed
 
 - name: start mysql
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     name: mysqld
     state: started
     enabled: yes
@@ -14,21 +14,17 @@
     name:
       - PyMySQL
       - cryptography
-    state: pip3.9
-    state: latest
+    executable: pip3.9
 
 - name: check the DB connection with host
   community.mysql.mysql_info:
     login_user: root
-    login_password: ExpenseApp@1
+    login_password: "{{mysql_root_password}}"
     login_host: mysql-dev.janand.online
     filter: version
   register: mysql_connection_output
-
-- name: print
-  debug:
-    msg: "{{ mysql_connection_output }}"
+  ignore_errors: yes
 
 - name: setup mysql password
-  ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
+  ansible.builtin.shell: mysql_secure_installation --set-root-pass {{mysql_root_password}}
   when: mysql_connection_output.failed is true
