--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,4 +4,4 @@
 - name: Install Node Exporter
   ansible.builtin.import_role:
     name: prometheus
-    tasks_from: node_exporter
+    tasks_from: node_expoter
